<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_more_add"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/addBook"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_addClassify"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/ClassifyManager"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_searchBook"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/searchBook"
        app:showAsAction="withText" />
</menu>