<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bjbsh.linford.bookapp.activity.SearchBookActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_marginBottom="20dp"
        toolbar:navigationIcon="?attr/actionModeCloseDrawable"
        toolbar:title="@string/searchBook"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textOfSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/classifySpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/searchBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/search" />
    </LinearLayout>

</LinearLayout>
