<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bjbsh.linford.bookapp.activity.AddBookActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/addBookToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        toolbar:navigationIcon="?attr/actionModeCloseDrawable"
        toolbar:title="添加书籍"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="封面:"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fileSelectButton"
            android:layout_width="15dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="选择..."
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fileName"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:gravity="left"
            android:overScrollMode="ifContentScrolls"
            android:text="TextView"
            android:textSize="18sp" />
    </LinearLayout>

     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/bookImage_add"
         android:layout_width="120dp"
         android:layout_height="130dp"
         android:layout_marginLeft="102dp"
         android:layout_marginTop="10dp"
         android:scaleType="fitXY"
         fresco:placeholderImage="@drawable/loading" />
   <!-- <ImageView
        android:id="@+id/bookImage_add"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bolder"
        android:scaleType="fitXY" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookName"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="名称:"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addBookName"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="6"
            android:ems="15"
            android:hint="@string/bookname" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookType"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="类型:"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/bookTypeGroup"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_weight="6"
            android:checkedButton="@+id/paperBook"
            android:contentDescription="类别:"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/paperBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/paperBook" />

            <RadioButton
                android:id="@+id/eBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ebook" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="分类:"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/classifySpinner"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_weight="6"
            android:popupBackground="@color/blue"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <Button
        android:id="@+id/addBookButton"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="25dp"
        android:text="添加"
        android:textSize="20sp" />
</LinearLayout>

